...
    final source = item.metadata['source'];
    if (source == null) return null;
    switch (source) {
      case SearchSourceKey.iptv:
        return 'IPTV';
      case SearchSourceKey.iptvVod:
        return 'VOD';
      case SearchSourceKey.iptvEpg:
        return 'EPG';
      case SearchSourceKey.jellyfin:
        return 'Jellyfin';
      case SearchSourceKey.emby:
        return 'Emby';
...
